--- a/gb/23/5/21/n14001138.md
+++ b/gb/23/5/21/n14001138.md
@@ -1,94 +1,100 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【健康1+1】对抗失智症、黄斑病变及前列腺癌的地中海饮食法</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/05/id14001141-1-600x400.jpg" />
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>护眼抗失智 还防心脏病 营养师分享地中海饮食5要点</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/07/id13781271-shutterstock_674783908-600x400.jpg" />///image2=```diff
+- 地中海饮食连续六年被评为顶级饮食。（Foxys Forest Manufacture/Shutterstock）
+```
 <h6>地中海饮食连续六年被评为顶级饮食。（Foxys Forest Manufacture/Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2023年05月21日讯】（大纪元记者Amber Yang 、Jojo综合报导）连续六年被《美国新闻与世界报导》（U.S. News &amp; World Report）评为顶级饮食的地中海饮食，被认为有利于心血管健康，但是它的好处不仅如此。全能家庭医学科诊所营养师嫚嫚在《健康1+1》节目中讲解，如何用地中海饮食对抗老年黄斑病变、前列腺癌及<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>。</p>
-<p>地中海饮食的七大饮食原则：</p>
-<p>1.大量蔬菜及适量的水果<br />
-2.全谷杂粮类食物<br />
-3.每周至少两次以上豆制品食物及两次鱼贝类等海鲜<br />
-4.适量乳制品、蛋或者白肉<br />
-5.少吃红肉及过度加工食品<br />
-6.喝适量红酒<br />
-7.食用橄榄油</p>
-<h2>银发族饮食法 预防<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>及心血管疾病</h2>
-<p>2023年发表在BMC Medicine期刊上的一篇研究发现，地中海饮食可减少失智症风险。这个研究对6万多名参与者在平均9.1年间的数据进行分析，评估饮食与痴呆风险的联系，结果发现那些严格遵循地中海饮食的人，罹患失智症的风险是比较低的。</p>
-<p>对于长者如何食用地中海饮食，嫚嫚提供下列建议：</p>
-<p>1.每餐吃约两个拳头大小的蔬菜量，尽量选软嫩的叶菜类，若硬一点的蔬菜可把它切得细碎点。</p>
-<p>2.建议吃约一个拳头大小的低糖水果，如蓝莓、草莓、奇异果、木瓜或小番茄等。</p>
-<p>3.选择全谷杂粮类食物，与白饭或白面条相比，全谷杂粮类含有较高的营养素及膳食纤维。</p>
-<p>4.每周两次以上食用豆制品及海鲜类食物，因为这类蛋白质含有较多的不饱和脂肪酸，有助于降低失智症或心血管疾病风险。</p>
-<p>5.早晚各补充一杯乳制品，如240毫升牛奶，或者约200克无调味乳酪。</p>
-<p>6.蛋及白肉仅次于豆制品及海鲜，是可以适量食用的蛋白质食物。</p>
-<p>7.红肉及过度加工食物，如火腿、热狗、香肠及培根等，一周的食用量最好少于一个掌心的量，因为这类食品会增加癌症及心血管疾病风险。</p>
-<p>8.甜食或加工食物，尤其是含糖饮料等，建议只在特殊节庆时才偶尔吃一点。</p>
-<p>9.建议饮用适量红酒，可用以维持健康的社交活动，女性一天约150毫升，男性一天约300毫升。</p>
-<p>10.补充特级初榨橄榄油，它有比较高量的单元不饱和脂肪酸Omega-9、维他命E、植物固醇，可降心血管疾病风险。</p>
-<figure id="attachment_14001142" aria-describedby="caption-attachment-14001142" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/05/id14001142-2-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14001142" src="https://i.epochtimes.com/assets/uploads/2023/05/id14001142-2-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14001142" class="wp-caption-text">（Oleksandra Naumenko/Shutterstock）</figcaption></figure>
-<h2>降低前列腺癌风险</h2>
+<p>【大纪元5月24日讯】（Amber Yang 、Jojo香港报导）连续6年被《美国新闻与世界报导》（U.S. News &amp; World Report）评为顶级饮食的地中海饮食，被认为有利于心血管健康，但是它的好处不仅如此。如何利用地中海饮食维护健康？家庭医学科诊所营养师嫚嫚在《健康1+1》节目中分享用地中海饮食对抗老年黄斑病变、前列腺癌及失智症的要点。</p>
+<h2><span style="color: #188638;">地中海饮食7大原则</span></h2>
+<p>· 大量蔬菜及适量的水果<br />
+·?全谷杂粮类食物<br />
+·?每周至少两次以上豆制品食物及两次鱼贝类等海鲜<br />
+·?适量乳制品、蛋或者白肉<br />
+·?少吃红肉及过度加工食品<br />
+·?喝适量红酒<br />
+·?食用橄榄油</p>
+<h2><span style="color: #188638;">1. 抗失智 预防心血管疾病?10类食物这样吃</span></h2>
+<p>2023年发表在BMC Medicine期刊上的一篇研究发现，地中海饮食可减少失智症风险。该研究对6万多名参与者在平均9.1年间的数据进行分析，评估饮食与痴呆风险的联系，结果发现那些严格遵循地中海饮食的人，罹患失智症的风险较低。</p>
+<p>长者食用地中海饮食的方法，嫚嫚提供下列建议：</p>
+<p><strong>◎ 蔬菜：</strong>每餐吃约两个拳头大小的蔬菜量，尽量选软嫩的叶菜类，若硬一点的蔬菜可把它切得细碎点。</p>
+<p><strong>◎ 低糖水果：</strong>建议吃约一个拳头大小的低糖水果，如蓝莓、草莓、奇异果、木瓜或小番茄等。</p>
+<p><strong>◎ 全谷杂粮类食物：</strong>与白饭或白面条相比，选择全谷杂粮类含有较高的营养素及膳食纤维。</p>
+<p><strong>◎ 豆类、海鲜：</strong>每周两次以上食用豆制品及海鲜类食物，因为这类蛋白质含有较多的不饱和脂肪酸，有助于降低失智症或心血管疾病风险。</p>
+<p><strong>◎ 乳制品：</strong>早晚各补充一杯乳制品，如240毫升牛奶，或者约200克无调味乳酪。</p>
+<p><strong>◎ 蛋白质：</strong>蛋及白肉仅次于豆制品及海鲜，是可以适量食用的蛋白质食物。</p>
+<p><strong>◎ 红肉及过度加工食物：</strong>如火腿、热狗、香肠及培根等，一周的食用量最好少于一个掌心的量，因为这类食品会增加癌症及心血管疾病风险。</p>
+<p><strong>◎ 甜食或加工食物：</strong>尤其是含糖饮料等，建议只在特殊节庆时才偶尔吃一点。</p>
+<p><strong>◎ 适量红酒：</strong>可用以维持健康的社交活动，女性一天约150毫升，男性一天约300毫升。</p>
+<p><strong>◎ 橄榄油：</strong>补充特级初榨橄榄油，它有比较高量的单元不饱和脂肪酸Omega-9、维他命E、植物固醇，可降心血管疾病风险。</p>
+<figure id="attachment_14003397" aria-describedby="caption-attachment-14003397" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id14003397-d92b5ab84bc6ce283beaef3b0c87e8eb.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14003397" src="https://i.epochtimes.com/assets/uploads/2023/05/id14003397-d92b5ab84bc6ce283beaef3b0c87e8eb-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14003397" class="wp-caption-text">地中海饮食中含有对健康有益的食物种类。（健康1+1 / 大纪元）</figcaption></figure>
+<h2><span style="color: #188638;">2. 三类营养?</span><span style="color: #188638;">降低前列腺癌风险</span></h2>
+<p>地中海食物强调进食种子类食物、不饱和脂肪酸食物，以及富含茄红素的食物，这三类营养有助于降低前列腺风险。</p>
+<p><strong>· 茄红素</strong></p>
 <p>Nutrients期刊在2022年发表的一篇研究综述发现，纳入研究的所有6项检验茄红素对前列腺癌治疗效果的动物研究，均呈现积极的结果，并表明茄红素补充剂可导致肿瘤体积或重量减少、细胞凋亡增加、前列腺癌特异性死亡率降低。</p>
 <p>该研究还提到，茄红素可以调节氧化和炎症过程、诱导细胞凋亡、抑制细胞分裂和癌细胞转移等。富含茄红素的食物包括番茄、红萝卜、西瓜、木瓜及葡萄柚等红色水果和蔬菜。嫚嫚表示，地中海饮食有助于摄取这类食物。</p>
-<p>地中海饮食也建议食用坚果种子类食物，这类食物富含维他命E，可以保护细胞膜，防止DNA受到伤害，从而降低癌变风险。嫚嫚强调，只有从天然食物当中摄取维他命E，才能够达到这样的好处，若是一直拚命地吃维他命E补充剂，其实是没有这个效果的。</p>
-<p>另外，嫚嫚表示，透过地中海饮食会摄入很高量的不饱和脂肪酸，一些研究发现摄入富含不饱和脂肪酸的食物如鱼类海鲜比较多的人，罹患前列腺癌的风险比较低。她认为，地中海饮食的这些特性，可以带来降低前列腺癌风险的好处。</p>
-<h2>延缓黄斑病变</h2>
+<p><strong>· 维他命E</strong></p>
+<p>坚果种子类食物富含维他命E，可以保护细胞膜，防止DNA受到伤害，从而降低癌变风险。嫚嫚强调，只有从天然食物当中摄取维他命E，才能够达到这样的好处，若是一直拚命地吃维他命E补充剂，其实并没有这样的效果。</p>
+<p><strong>· 不饱和脂肪酸</strong></p>
+<p>地中海饮食会摄入高量不饱和脂肪酸，一些研究发现摄入富含不饱和脂肪酸的食物，如鱼类海鲜比较多的人罹患前列腺癌的风险比较低。</p>
+<h2><span style="color: #188638;">3. 三类食物?延缓黄斑病变</span></h2>
 <p>诱发黄斑病变的风险因子有很多，包含老化、抽烟、肥胖、三高（高血压、高血脂、高血糖）、营养摄取不均衡，或是暴露在电子产品的高强度蓝光下。这些因素都会增加视网膜清除代谢废物的能力，如果这些代谢废物不能及时清除，就会很容易累积在视网膜上，形成黄色或白色沉淀物，就是所谓的黄斑病变。</p>
-<p>2022年发表在Nutrients期刊上的一项回顾性研究表明，坚持地中海饮食可以延缓与年龄相关黄斑病变的发作和进展。嫚嫚解释说，通常神经退化性疾病，发生在脑部的是失智症，发生在视网膜上的是黄斑病变。地中海饮食已被证实有延缓失智症的功效，因此对于黄斑病变也有预防作用。</p>
-<p>地中海饮食中可帮助延缓黄斑病变的食物包括全谷杂粮或深色的蔬菜，如番薯叶、红萝卜、南瓜、番薯。它们都含有较多的维他命A、叶黄素及玉米黄素，有很好的抗氧化能力，对于视网膜来说，就如同太阳眼镜般，可以帮助阻挡蓝光，有利于延缓黄斑病变。</p>
-<p>嫚嫚指出，地中海饮食也建议选择食用莓果类的水果，当中富含的花青素可以提高抗氧化作用，保护视网膜。另外地中海饮食推荐一周吃两次鱼类海鲜，当中含有足够的Omega-3脂肪酸，可以抗发炎，对眼睛健康也很有帮助。</p>
-<figure id="attachment_14001145" aria-describedby="caption-attachment-14001145" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/05/id14001145-3-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14001145" src="https://i.epochtimes.com/assets/uploads/2023/05/id14001145-3-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14001145" class="wp-caption-text">（Marian Weyo/Shutterstock）</figcaption></figure>
-<h2>油品食用法</h2>
+<p>2022年发表在《营养素》（Nutrients）期刊上的一项回顾性研究表明，坚持地中海饮食可以延缓与年龄相关黄斑病变的发作和进展。嫚嫚解释说，通常神经退化性疾病，发生在脑部的是失智症，发生在视网膜上的是黄斑病变。地中海饮食已被证实有延缓失智症的功效，因此对于黄斑病变也有预防作用。</p>
+<p>嫚嫚指出，地中海饮食中可帮助延缓黄斑病变的食物，至少包括3类：</p>
+<p><strong>1. 全谷杂粮或深色的蔬菜：如番薯叶、红萝卜、南瓜、番薯。它们都含有较多的维他命A、叶黄素及玉米黄素，有很好的抗氧化能力，</strong>对于视网膜来说，就如同太阳眼镜般，可以帮助阻挡蓝光，有利于延缓黄斑病变。</p>
+<p><strong>2. 莓果类的水果：</strong>这类水果富含的花青素可以提高抗氧化作用，保护视网膜。</p>
+<p><strong>3. 海鲜食物：</strong>一周吃两次鱼类海鲜，当中含有足够的Omega-3脂肪酸，可以抗发炎，对眼睛健康也很有帮助。</p>
+<figure id="attachment_14003392" aria-describedby="caption-attachment-14003392" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id14003392-80f63f94a0263f020d115c60f5e55495.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14003392" src="https://i.epochtimes.com/assets/uploads/2023/05/id14003392-80f63f94a0263f020d115c60f5e55495-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14003392" class="wp-caption-text">地中海饮食中可帮助延缓黄斑病变的食物。（（健康1+1 / 大纪元）</figcaption></figure>
+<h2><span style="color: #188638;">4. 地中海饮食的油品 这样食用</span></h2>
 <p>很多人会觉得大量油脂不是对身体不好吗？为什么在地中海饮食中却有补充油的原则呢？嫚嫚表示，造成心血管疾病的主要油脂成分，是属于饱和脂肪及反式脂肪的氢化植物油，也就是化学油脂。地中海饮食的油脂虽占整体热量的30%至40%，但最主要都是属于不饱和脂肪。</p>
 <p>橄榄油中的单元不饱和脂肪酸，以及鱼类海鲜中的多元不饱和脂肪酸，可以帮助降低坏的胆固醇，减少心血管疾病的风险。嫚嫚表示，很多坏油其实是存在于加工食物、油炸食品、甜点、零食、饼干当中，如果大家多选择天然食物，就可以避开大部分的坏油。</p>
 <p>嫚嫚建议可以选择橄榄油、牛油果油、亚麻籽油、鱼油，或是85%以上的黑巧克力也含有很好的油脂。另外，无调味的坚果及牛油果也是好的油脂来源，但她建议坚果的摄取量应控制在每天一汤匙左右，否则吃太多容易发胖。</p>
 <p>嫚嫚提到，橄榄油含有橄榄多酚，最适合以面包沾取、沙拉凉拌的方式食用，可以保留更多营养成分。由于橄榄油的发烟点约为160摄氏度，家庭用小火拌炒或水炒时使用橄榄油其实没有问题，但若要大火拌炒则不合适。亚麻籽油也是完全不适合加热的一种油。如果需要用油煎或大火炒，可以选用牛油果油、苦茶油或玄米油，它们都有比较好的耐热性，适合用来高温烹调。</p>
-<h2>蛋白质谷类食用法</h2>
+<figure id="attachment_14003394" aria-describedby="caption-attachment-14003394" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/05/id14003394-7c1d3f536e8281fc74a282c0148dffd4.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14003394" src="https://i.epochtimes.com/assets/uploads/2023/05/id14003394-7c1d3f536e8281fc74a282c0148dffd4-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14003394" class="wp-caption-text">家庭用小火拌炒或水炒时使用橄榄油。（健康1+1 / 大纪元）</figcaption></figure>
+<h2><span style="color: #188638;">5. 蛋白质谷类食用法</span></h2>
 <p>有些人担心地中海饮食的肉量不多，是否会影响蛋白质的摄取量？嫚嫚认为，地中海饮食建议多吃含有大豆异黄酮及膳食纤维的豆制品、海鲜及乳制品，这些都是蛋白质的来源，所以不需要担心蛋白质不足的问题。</p>
-<p>对于有麸质过敏的人，嫚嫚建议只要不吃面粉制作的食物，如面包、吐司、馒头、松饼、饼干、披萨、汉堡等加工食品，改吃番薯、芋头、山药、南瓜、玉米、糙米、薏仁等不含麸质蛋白的全谷杂粮类食物，就没有问题了。</p>
+<p>对于有麸质过敏的人，嫚嫚建议只要不吃面粉制作的食物，如面包、吐司、馒头、松饼、饼干、披萨、汉堡等加工食品，改吃番薯、芋头、山药、南瓜、玉米、糙米、薏仁等不含麸质蛋白的全谷杂粮类食物，就没有问题了。◇</p>
+<p><span style="color: #188638;"><em>了解更多地中海饮食内容，请点击下方视频：</em></span></p>
+<div class="video_fit_container"><a loading="lazy" width="635" b="356" class="video_frame" src=""></a><a href="https://doyvntponycdh.cloudfront.net/K8xEJrzrp"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/XiW8VhXy4Jw?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+</div>
 <p>责任编辑：郑桦</p>
-	
 <hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998536.md#1">纯植物更健康 韩国顶级护肤品K-Guardians登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998817.md#1">月桂叶驻颜养生汤 让你吃吃喝喝更健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999866.md#1">5/20亚市快乐健康日 中西医学博士联合义诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000073.md#1">澳洲私人健康保险费下月将大幅飙升</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/17/n13998536.md#1">顶级体验 韩国纯植物护肤品K-Guardians登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/17/n13998817.md#1">月桂叶驻颜养生汤 让你吃吃喝喝更健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/18/n13999866.md#1">5/20亚市快乐健康日 中西医学博士联合义诊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/19/n14000073.md#1">澳洲私人健康保险费下月将大幅飙升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305573.md#1">西瓜不止消暑护心 营养师教一吃法护肝解毒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305597.md#1">舒缓干眼不适 医师推荐多吃富含4种成分的食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304640.md#1">西瓜消暑解渴 不仅具减重、健发功效 还可入菜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998906.md#1">【未解之谜】杨贵妃生死之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13995977.md#1">【未解之谜】离人间仙境一步之遥 他为何放弃了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993884.md#1">大唐传奇公主 聚众美于一身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/5/3/26/n866643.md#1">今天吃什么？神说了算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/14/n13996302.md#1">震惊伪帝刘豫的轮回事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000812.md#1">【晚间新闻】雄安新区遭抵制？ 专家：内斗将极为激烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14000734.md#1">【时事军事】乌防空部队成功 只是幸运吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001028.md#1">【菁英论坛】俄“匕首”被拦截 俄乌战拐点到？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000241.md#1">习家军各起山头 何立峰“厦大帮”浮出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000539.md#1">中共为何惧怕马斯克的“星链”服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000136.md#1">传有网友举报吴京“辱军”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999934.md#1">曾任郭富城形象顾问 造型师张学润在深圳自尽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999223.md#1">71岁洪金宝偕孙子出镜 一细节泄其健康状况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000491.md#1">蔡少芬晒全家福为张晋庆生 夫妻互动超有趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n14000548.md#1">疑因挺白纸运动遭报复 周峻纬主演新剧突撤档</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999910.md#1">直播中4次读错一常用字 大陆女星周也引争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999512.md#1">如何享受美好旅程？ 空姐透露7个搭机秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999158.md#1">每天刷牙还得蛀牙、牙周病？用对牙刷牙线是关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997442.md#1">比降糖药效果更好？摄入两类纤维 血糖1个月降25%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997302.md#1">30岁得了五十肩？小心！你的颈椎正在提早退化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/19/n13999962.md#1">癌细胞被饿死 他断食抗癌成功 但这类人不适用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303468.md#1">【思想领袖】中共东进太平洋挑战美国的策略</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306761.md#1">【中国禁闻】巴黎奥运中共乱象多 乒乓女单决赛内斗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305388.md#1">越来越多美国家庭因游览迪士尼而负债</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/21/n14001138.htm">【健康1+1】对抗失智症、黄斑病变及前列腺癌的地中海饮食法</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/5/21/n14001138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/5/21/n14001138.htm">护眼抗失智 还防心脏病 营养师分享地中海饮食5要点</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/5/21/n14001138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
